Add sidebar changes

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -39,7 +39,7 @@ input[type="password"] {
   border-radius: 12px;
 }
 input::placeholder {
-  color: $middle-green; /* Göstərilən rəngi təyin edin */
+  color: $dark-green; /* Göstərilən rəngi təyin edin */
   font-weight: bold; /* İtalik şrift təyin edin (istəyə bağlı) */
   font-size: 16px; /* Şrift ölçüsünü təyin edin */
   font-family: "Helvetica", sans-serif;
