--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,6 +22,49 @@ svg {
   color: white;
   font-size: 20px;
 }
+::ng-deep .mat-mdc-menu-panel {
+  border-radius: 30px !important;
+  background-color: $main-green !important;
+  padding: 20px 30px;
+}
+::ng-deep .mat-mdc-menu-panel button {
+  text-align: center;
+  background-color: white;
+  padding: 0px 40px;
+  border-radius: 10px;
+  font-size: 14px;
+  color: $green;
+  font-family: "Helvetica", sans-serif;
+  font-weight: bold!important;
+}
+::ng-deep .mat-mdc-menu-panel button:hover{ 
+  color: white!important;
+}
+
+.example-container {
+  width: 500px;
+  height: 300px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+}
+
+.toggle{
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+
 
 @media (max-width: 992px) {
   .menu-icon i {
