--- a/src/app/volunteers-list/volunteers-list.component.scss
+++ b/src/app/volunteers-list/volunteers-list.component.scss
@@ -69,7 +69,7 @@ mat-panel-title {
   font-family: "Helvetica", sans-serif;
 }
 
-.info_detail a{
+.info_detail a {
   color: $green;
 }
 
@@ -87,3 +87,107 @@ mat-paginator {
   font-size: 30px;
   font-weight: light !important;
 }
+
+.sidebar {
+  background-color: $main-green;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 542px;
+  height: calc(100vh - 40px);
+  z-index: 2;
+  display: none;
+}
+
+.form-search input[type="text"] {
+  width: 400px !important;
+  height: 41px !important;
+  border: none;
+  outline: none;
+  border-radius: 12px;
+  padding: 0px 20px;
+}
+
+select,
+input[type="text"] {
+  width: 100% !important;
+  height: 41px !important;
+  border: none;
+  outline: none;
+  border-radius: 12px;
+  padding-left: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Helvetica", sans-serif;
+  color: $dark-green;
+}
+
+input::placeholder {
+  color: $dark-green;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Helvetica", sans-serif;
+}
+option {
+  color: $dark-green;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Helvetica", sans-serif;
+  padding: 30px 0px !important;
+}
+
+#custom-search-form .btn {
+  border: 0;
+  background: none;
+  padding: 2px 5px;
+  margin-top: 2px;
+  position: relative;
+  left: -35px;
+  margin-bottom: 0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.search-query:focus + button {
+  z-index: 3;
+}
+
+.menu button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.menu button i {
+  font-size: 20px;
+  color: white;
+  rotate: 90deg;
+}
+
+
+.add{
+  width: 40px;
+  background-color: transparent;
+  border:4px solid white;
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+  padding: 5px 7px;
+  border-radius: 12px;
+}
+
+.result{
+  width: 100% !important;
+  height: 41px !important;
+  border: none;
+  outline: none;
+  border-radius: 12px;
+  padding-left: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Helvetica", sans-serif;
+  color: $dark-green;
+}
+
+
