--- a/src/app/components/volunteers-list/volunteers-list.component.scss
+++ b/src/app/components/volunteers-list/volunteers-list.component.scss
@@ -6,6 +6,7 @@
   font-size: 14px;
 }
 
+/*Volunteers list header style start*/
 .user-list-header {
   background-color: $main-green;
   color: white;
@@ -15,28 +16,71 @@
   padding-bottom: 15px !important;
   border-radius: 15px;
 }
+/*Volunteers list header style end*/
 
-.mat-expansion-panel {
-  border-radius: 15px;
-}
-
+/*Volunteers list content style start*/
 .user-list-info {
   max-height: 914px !important;
   overflow-y: auto;
   font-size: 14px;
-}
-.user-list-info span {
-  font-size: 14px;
-  padding: 0px !important;
-  margin: 0px !important;
-}
-mat-panel-title {
-  color: #064e4e !important;
-  font-family: "Helvetica", sans-serif;
-  font-weight: bold;
-}
+  span {
+    font-size: 14px;
+    padding: 0px !important;
+    margin: 0px !important;
+  }
+  .mat-expansion-panel {
+    border-radius: 15px;
+  }
+  mat-panel-title {
+    color: #064e4e !important;
+    font-family: "Helvetica", sans-serif;
+    font-weight: bold;
+  }
+  .info_detail {
+    border: 2px solid $green;
+    padding: 20px;
+    border-radius: 24px;
+    font-size: 14px;
+    color: $green;
+    font-family: "Helvetica", sans-serif;
+  }
+  .vol_photo {
+    background-color: lightgray;
+  }
+  .vol_photo p {
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
+    font-family: "Helvetica", sans-serif;
+  }
 
-/* Change the scrollbar width, color, and corner radius */
+  .info_detail a {
+    color: $green;
+  }
+  .work_status i {
+    font-size: 30px;
+    font-weight: light !important;
+  }
+
+}
+select {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.select-wrapper {
+  position: relative;
+}
+.select-wrapper::after {
+  content: "▼";
+  font-size: 1rem;
+  top: 12px;
+  right: 20px;
+  position: absolute;
+  color: $main-green;
+}
+/*Volunteers list content style end*/
+
+/* Scrollbar style Start*/
 ::-webkit-scrollbar {
   width: 10px; /* Adjust as needed */
 }
@@ -49,30 +93,9 @@ mat-panel-title {
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1; /* Adjust the color */
 }
+/* Scrollbar style end*/
 
-.info_detail {
-  border: 2px solid $green;
-  padding: 20px;
-  border-radius: 24px;
-  font-size: 14px;
-  color: $green;
-  font-family: "Helvetica", sans-serif;
-}
-
-.vol_photo {
-  background-color: lightgray;
-}
-.vol_photo p {
-  font-weight: bold;
-  font-size: 20px;
-  color: black;
-  font-family: "Helvetica", sans-serif;
-}
-
-.info_detail a {
-  color: $green;
-}
-
+/*Paginator style start*/
 mat-paginator {
   background-color: transparent !important;
   padding: 0px;
@@ -82,112 +105,117 @@ mat-paginator {
   padding: 0px;
   margin: 0px;
 }
+/*Paginator style end*/
 
-.work_status i {
-  font-size: 30px;
-  font-weight: light !important;
+/*Sidebar style start*/
+.sidebarBg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
 }
-
 .sidebar {
   background-color: $main-green;
   position: absolute;
+  left: -50%;
+  top: -50%;
+  width: 542px;
+  min-height: calc(100vh - 40px);
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  overflow-y: hidden;
+  z-index: 3;
+  .form-search input[type="text"] {
+    width: 400px !important;
+    height: 41px !important;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    padding: 0px 20px;
+  }
+  select,
+  input[type="text"] {
+    width: 100% !important;
+    height: 41px !important;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    padding-left: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica", sans-serif;
+    color: $dark-green;
+  }
+  input::placeholder {
+    color: $dark-green;
+    font-weight: bold;
+    font-size: 16px;
+    font-family: "Helvetica", sans-serif;
+  }
+  option {
+    color: $dark-green;
+    font-weight: bold;
+    font-size: 16px;
+    font-family: "Helvetica", sans-serif;
+    padding: 30px 0px !important;
+  }
+  #custom-search-form .btn {
+    border: 0;
+    background: none;
+    padding: 2px 5px;
+    margin-top: 1px;
+    position: relative;
+    left: -35px;
+    margin-bottom: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+  }
+  .search-query:focus + button {
+    z-index: 3;
+  }
+  .filterContent {
+    overflow-y: auto;
+  }
+  .menu button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+  }
+  .menu button i {
+    font-size: 20px;
+    color: white;
+    rotate: 90deg;
+  }
+  .add {
+    width: 40px;
+    background-color: transparent;
+    border: 4px solid white;
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+    padding: 5px 7px;
+    border-radius: 12px;
+  }
+  .result {
+    width: 100% !important;
+    height: 41px !important;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    padding-left: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Helvetica", sans-serif;
+    color: $dark-green;
+  }
+}
+.open {
   top: 0;
   left: 0;
-  width: 542px;
-  height: calc(100vh - 40px);
-  z-index: 2;
-  // display: none;
+  transition: transform 0.5s ease-in-out;
 }
-
-.form-search input[type="text"] {
-  width: 400px !important;
-  height: 41px !important;
-  border: none;
-  outline: none;
-  border-radius: 12px;
-  padding: 0px 20px;
-}
-
-select,
-input[type="text"] {
-  width: 100% !important;
-  height: 41px !important;
-  border: none;
-  outline: none;
-  border-radius: 12px;
-  padding-left: 10px;
-  font-size: 16px;
-  font-weight: bold;
-  font-family: "Helvetica", sans-serif;
-  color: $dark-green;
-}
-
-input::placeholder {
-  color: $dark-green;
-  font-weight: bold;
-  font-size: 16px;
-  font-family: "Helvetica", sans-serif;
-}
-option {
-  color: $dark-green;
-  font-weight: bold;
-  font-size: 16px;
-  font-family: "Helvetica", sans-serif;
-  padding: 30px 0px !important;
-}
-
-#custom-search-form .btn {
-  border: 0;
-  background: none;
-  padding: 2px 5px;
-  margin-top: 2px;
-  position: relative;
-  left: -35px;
-  margin-bottom: 0;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-
-.search-query:focus + button {
-  z-index: 3;
-}
-
-.menu button {
-  background-color: transparent;
-  border: none;
-  outline: none;
-}
-
-.menu button i {
-  font-size: 20px;
-  color: white;
-  rotate: 90deg;
-}
-
-
-.add{
-  width: 40px;
-  background-color: transparent;
-  border:4px solid white;
-  color: white;
-  font-size: 36px;
-  font-weight: bold;
-  padding: 5px 7px;
-  border-radius: 12px;
-}
-
-.result{
-  width: 100% !important;
-  height: 41px !important;
-  border: none;
-  outline: none;
-  border-radius: 12px;
-  padding-left: 10px;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "Helvetica", sans-serif;
-  color: $dark-green;
-}
-
-
+/*Sidebar style end*/
