--- a/src/app/components/volunteers-list/volunteers-list.component.scss
+++ b/src/app/components/volunteers-list/volunteers-list.component.scss
@@ -20,7 +20,7 @@
 
 /*Volunteers list content style start*/
 .user-list-info {
-  max-height: 914px !important;
+  max-height: 60vh !important;
   overflow-y: auto;
   font-size: 14px;
   span {
@@ -63,21 +63,6 @@
   }
 
 }
-select {
-  -webkit-appearance: none;
-  appearance: none;
-}
-.select-wrapper {
-  position: relative;
-}
-.select-wrapper::after {
-  content: "▼";
-  font-size: 1rem;
-  top: 12px;
-  right: 20px;
-  position: absolute;
-  color: $main-green;
-}
 /*Volunteers list content style end*/
 
 /* Scrollbar style Start*/
@@ -92,6 +77,7 @@ select {
 
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1; /* Adjust the color */
+  border-radius: 6px; /* Adjust the corner radius */
 }
 /* Scrollbar style end*/
 
@@ -116,18 +102,29 @@ mat-paginator {
   top: 0px;
   left: 0px;
   z-index: 2;
+  overflow: hidden;
 }
 .sidebar {
   background-color: $main-green;
-  position: absolute;
+  position: fixed;
   left: -50%;
   top: -50%;
   width: 542px;
-  min-height: calc(100vh - 40px);
+  height: 100vh;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   overflow-y: hidden;
   z-index: 3;
+  .filterContent {
+    height: 100%;
+    overflow-y: auto;
+  }
+ ::-webkit-scrollbar-thumb {
+    background-color: $light-green!important; /* Adjust the color */
+  }
+  .form-search{
+    height: calc(100vh - 90px);
+  }
   .form-search input[type="text"] {
     width: 400px !important;
     height: 41px !important;
@@ -139,28 +136,26 @@ mat-paginator {
   select,
   input[type="text"] {
     width: 100% !important;
-    height: 41px !important;
+    padding: 10px 30px!important;
     border: none;
     outline: none;
     border-radius: 12px;
-    padding-left: 10px;
     font-size: 16px;
     font-weight: bold;
     font-family: "Helvetica", sans-serif;
     color: $dark-green;
+  }
+  select option {
+    color: $dark-green;
+    font-weight: bold;
+    font-size: 16px;
+    font-family: "Helvetica", sans-serif;
   }
   input::placeholder {
     color: $dark-green;
     font-weight: bold;
     font-size: 16px;
     font-family: "Helvetica", sans-serif;
-  }
-  option {
-    color: $dark-green;
-    font-weight: bold;
-    font-size: 16px;
-    font-family: "Helvetica", sans-serif;
-    padding: 30px 0px !important;
   }
   #custom-search-form .btn {
     border: 0;
@@ -177,8 +172,20 @@ mat-paginator {
   .search-query:focus + button {
     z-index: 3;
   }
-  .filterContent {
-    overflow-y: auto;
+  select {
+    -webkit-appearance: none;
+    appearance: none;
+  }
+  .select-wrapper {
+    position: relative;
+  }
+  .select-wrapper::after {
+    content: "▼";
+    font-size: 1rem;
+    top: 12px;
+    right: 20px;
+    position: absolute;
+    color: $main-green;
   }
   .menu button {
     background-color: transparent;
@@ -190,7 +197,7 @@ mat-paginator {
     color: white;
     rotate: 90deg;
   }
-  .add {
+  .add,.remove {
     width: 40px;
     background-color: transparent;
     border: 4px solid white;
@@ -216,6 +223,6 @@ mat-paginator {
 .open {
   top: 0;
   left: 0;
-  transition: transform 0.5s ease-in-out;
+  transition: left 0.5s ease;
 }
 /*Sidebar style end*/
