--- a/src/app/components/volunteers-list/volunteers-list.component.html
+++ b/src/app/components/volunteers-list/volunteers-list.component.html
@@ -603,9 +603,7 @@
                   class="custom-select"
                 >
                   <option value="">Kompüter bilikləri</option>
-                  <option value="">İngilis</option>
-                  <option value="">Rus</option>
-                  <option value="">Turk</option>
+                  <option value="">Ofis proqramları</option>
                 </select>
               </div>
             </div>
@@ -613,7 +611,9 @@
             <div class="col-lg-3 p-0 select-wrapper">
               <select name="" id="" formControlName="kompSkills">
                 <option value="">Seçin</option>
-                <option value="">Ofis proqramları</option>
+                <option value="">Əla</option>
+                <option value="">Yaxsı</option>
+                <option value="">Zəif</option>
               </select>
             </div>
             <button
@@ -632,7 +632,7 @@
             -
           </button>
         </div>
-        
+
         <!--Könüllü fəaliyəti üçün maraq göstərilən sahə-->
         <div class="select-wrapper p-0 mx-0 mt-4">
           <select name="" id="" formControlName="volunteersInterestArea">
