--- a/src/app/components/volunteers-list/volunteers-list.component.scss
+++ b/src/app/components/volunteers-list/volunteers-list.component.scss
@@ -61,7 +61,6 @@
     font-size: 30px;
     font-weight: light !important;
   }
-
 }
 /*Volunteers list content style end*/
 
@@ -94,35 +93,42 @@ mat-paginator {
 /*Paginator style end*/
 
 /*Sidebar style start*/
-.sidebarBg {
-  width: 100%;
-  height: 100%;
+.overlay {
+  width: 0;
+  height: 0;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: 2;
   overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.5s;
+
+  &.sidebarBg {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+  }
 }
 .sidebar {
   background-color: $main-green;
   position: fixed;
-  left: -50%;
-  top: -50%;
+  left: -542px;
+  top: 0px;
   width: 542px;
   height: 100vh;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
-  overflow-y: hidden;
   z-index: 3;
+  transition: left 0.5s ease;
   .filterContent {
     height: 100%;
     overflow-y: auto;
   }
- ::-webkit-scrollbar-thumb {
-    background-color: $light-green!important; /* Adjust the color */
+  ::-webkit-scrollbar-thumb {
+    background-color: $light-green !important; /* Adjust the color */
   }
-  .form-search{
+  .form-search {
     height: calc(100vh - 90px);
   }
   .form-search input[type="text"] {
@@ -136,7 +142,7 @@ mat-paginator {
   select,
   input[type="text"] {
     width: 100% !important;
-    padding: 10px 30px!important;
+    padding: 10px 30px !important;
     border: none;
     outline: none;
     border-radius: 12px;
@@ -187,6 +193,19 @@ mat-paginator {
     position: absolute;
     color: $main-green;
   }
+  .menu {
+    width: 175px;
+    position: absolute;
+    left: 481px;
+    top: 0;
+    background-color: #4b7d83;
+    display: flex;
+    height: 76px;
+    padding-right: 35px;
+    justify-content: end;
+    z-index: -1;
+    border-radius: 30px;
+  }
   .menu button {
     background-color: transparent;
     border: none;
@@ -195,9 +214,14 @@ mat-paginator {
   .menu button i {
     font-size: 20px;
     color: white;
-    rotate: 90deg;
+    transition: rotate 0.5s;
+
+    &.open {
+      rotate: -90deg;
+    }
   }
-  .add,.remove {
+  .add,
+  .remove {
     width: 40px;
     background-color: transparent;
     border: 4px solid white;
@@ -223,6 +247,5 @@ mat-paginator {
 .open {
   top: 0;
   left: 0;
-  transition: left 0.5s ease;
 }
 /*Sidebar style end*/
