--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
     <div
       class="col-lg-1 menu-icon px-5 d-flex justify-content-center align-items-center"
     >
-    <button class="toggle" (click)="toggleSidebar()"><i class="fa-solid fa-bars"></i></button>
+    <!-- <button class="toggle" (click)="toggleSidebar()"><i class="fa-solid fa-bars"></i></button> -->
     </div>
     <!--FHN Logo-->
     <div class="col-lg-9">
