--- a/src/app/components/add-new-volunteers/add-new-volunteers.component.scss
+++ b/src/app/components/add-new-volunteers/add-new-volunteers.component.scss
@@ -1,1 +1,67 @@
 @import "../../../styles/variables.scss";
+
+.container-fluid {
+  background-color: $light-green;
+  border-radius: 40px;
+  font-size: 14px;
+}
+
+::ng-deep .mat-mdc-text-field-wrapper {
+  padding: 0px !important;
+  height: 51px;
+}
+
+::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: white !important;
+  border: 1px solid black;
+  padding: 0px;
+}
+
+::ng-deep .mat-horizontal-content-container {
+  margin: 0px;
+  padding: 0px 24px 10px 24px !important;
+}
+
+::ng-deep
+  .mdc-text-field--filled:not(.mdc-text-field--disabled)
+  .mdc-line-ripple::before {
+  border: none !important;
+}
+
+::ng-deep
+  .mat-mdc-text-field-wrapper:not(.mdc-text-field--outlined)
+  .mat-mdc-form-field-infix {
+  padding-left:12px;
+
+}
+
+::ng-deep .mdc-floating-label--float-above{
+  border-bottom: none!important;
+  outline: none!important;
+  color: $green!important;
+}
+
+::ng-deep .mdc-line-ripple--active{
+  border: none!important;
+}
+
+::ng-deep .mdc-text-field--focused{
+  border: none;
+  outline: none;
+}
+::ng-deep .mat-focused{
+  border: none;
+  outline: none;
+}
+::ng-deep  --mdc-filled-text-field-focus-active-indicator-color
+
+
+/*Next button style*/
+::ng-deep .mat-stepper-next {
+  background-color: $green;
+  color: white !important; /* Göstərilən rəngi təyin edin */
+  font-weight: bold;
+  font-size: 16px !important;
+  font-family: "Helvetica", sans-serif !important;
+  padding: 0px 20px !important;
+}
