--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
     <div
       class="col-lg-1 menu-icon px-5 d-flex justify-content-center align-items-center"
     >
-    <!-- <button class="toggle" (click)="toggleSidebar()"><i class="fa-solid fa-bars"></i></button> -->
+      <!-- <button class="toggle" (click)="toggleSidebar()"><i class="fa-solid fa-bars"></i></button> -->
     </div>
     <!--FHN Logo-->
     <div class="col-lg-9">
@@ -497,7 +497,7 @@
         </div>
       </button>
       <mat-menu #menu="matMenu" class="mt-3">
-        <button mat-menu-item class="mb-2">
+        <button mat-menu-item class="mb-2" routerLink="/add-new-volunteers">
           <div
             class="d-flex flex-row justify-content-center align-items-center"
           >
