--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "styles/variables.scss";
 
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
 @font-face {
   font-family: "Helvetica";
@@ -27,19 +19,20 @@ body {
   font-style: normal;
 }
 
+/*Scroll style start*/
 ::-webkit-scrollbar {
   width: 10px;
 }
-
 ::-webkit-scrollbar-thumb {
   background-color: $main-green;
   border-radius: 6px;
 }
-
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1;
 }
+/*Stepper style end*/
 
+/*Tab style start*/
 mat-tab-group.user-details {
   span.mdc-tab-indicator {
     display: none;
@@ -103,3 +96,53 @@ mat-tab-group.user-details {
     border-radius: 12px !important;
   }
 }
+/*Tab style end*/
+
+/*Stepper style start*/
+mat-stepper {
+  border-radius: 15px;
+  padding: 20px 30px 20px 20px;
+  .mat-step-icon {
+    display: none;
+  }
+  .mat-stepper-horizontal-line,
+  .mat-stepper-vertical-line {
+    visibility: hidden;
+  }
+  .mat-step-header {
+    width: 100%;
+    height: 46px !important;
+    padding: 0px 20px !important;
+    border: 2px solid $tab-light-green;
+    border-radius: 12px !important;
+    margin-left: 10px;
+    text-align: center !important;
+  }
+  .mat-step-label {
+    width: 100%;
+    text-align: center !important;
+  }
+  .mat-step-text-label {
+    font-family: "Helvetica", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    color: $tab-light-green;
+  }
+
+  .mat-step-header[aria-selected="true"] {
+    font-family: "Helvetica", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    border: 2px solid $green;
+    box-shadow: 0 0 17px 2px $box-shadow;
+    -webkit-box-shadow: 0 0 17px 2px $box-shadow;
+    -moz-box-shadow: 0 0 17px 2px $box-shadow;
+  }
+  .mat-step-header[aria-selected="true"] .mat-step-text-label {
+    color: $dark-green;
+  }
+}
+/*Stepper style end*/
+
+
+
